# FraCtuS

./: Ast.cpp  Ast.h  CMakeLists.txt  Fraction.cpp  Fraction.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  README.md  Reader.cpp  Reader.h  Scanner.cpp  Scanner.h  Scope.cpp  Scope.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  in1.txt  in2.txt  main.cpp
